--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           "widgets": [
             {
-              "id": "suma",
+              "id": "cantidad",
               "type": "formula",
               "title": "Cantidad de multas",
               "layer_id": "d7b83bbe-61be-49e9-9b37-748b502f56ef",
