--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               "layer_id": "d7b83bbe-61be-49e9-9b37-748b502f56ef",
               "options": {
                 "column": "cartodb_id",
-                "operation": "num",
+                "operation": "count",
                 "suffix": ""
               }
             } ,
